changed image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="background">
-      <img src="bps_bg.jpg" alt="BPS picture" class="bg-index-image" />
+      <img src="images/bps_bg.jpg" alt="BPS picture" class="bg-index-image" />
       <div class="text">
         <h1>BILLAWAR PUBLIC SCHOOL</h1>
       </div>
@@ -31,7 +31,7 @@
       <div class="founder_message">
         <div class="column left">
           <img
-            src="founder_img.jpg"
+            src="images/founder_img.jpg"
             alt="Founder's Image"
             class="founder_img"
           />
